proper naming conventions added (when & then for tests)